--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,8 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.category-aktif{
+  background-color: #22668a;
+  color: white;
+}
